corrected unwanted bug that regional variants would cause extra long headline tags in the pokemon card component, causing things to not fit inside said component

--- a/src/components/PokemonCard.css
+++ b/src/components/PokemonCard.css
@@ -21,7 +21,7 @@
     font-family: 'Orbitron', sans-serif;
 }
 
-.card-h2 {
+.card-h {
     margin-left: 20px;
 }
 
